--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -12,6 +12,10 @@
         <ion-icon name="key" ></ion-icon>
         <ion-label>{{ 'CRX2fa' | translate }}</ion-label>
       </ion-tab-button>
+      <ion-tab-button *ngIf="authService.isAllowed('parents.manage')" tab="crx2fa" >
+        <ion-icon name="people-circle" ></ion-icon>
+        <ion-label>{{ 'parents' | translate }}</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
 
