--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -9,16 +9,16 @@
       <ion-label>{{ 'Tests' | translate }}</ion-label>
     </ion-tab-button>
     <ion-tab-button *ngIf="authS.isAllowed('education.rooms')" tab="roomcontrol">
-      <ion-icon name="room"></ion-icon>
+      <ion-icon name="grid"></ion-icon>
       <ion-label>{{ 'Room' | translate }}</ion-label>
     </ion-tab-button>
     <ion-tab-button *ngIf="authS.isAllowed('education.proxy')" tab="mypositive">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{ 'Security' | translate }}</ion-label>
     </ion-tab-button>
-    <ion-tab-button *ngIf="authS.isOneOfAllowed(['ptms.manage','ptms.use'])" tab="ptms">
+    <!-- ion-tab-button *ngIf="authS.isOneOfAllowed(['ptms.manage','ptms.use'])" tab="ptms">
       <ion-icon name="calendar"></ion-icon>
-      <ion-label>{{ 'Security' | translate }}</ion-label>
-    </ion-tab-button>
+      <ion-label>{{ 'PTM' | translate }}</ion-label>
+    </ion-tab-button -->
   </ion-tab-bar>
 </ion-tabs>
