Now we can create parents ptms, show the events, register rooms and events.

--- a/src/app/protected/cranix/devices/add-device/add-device.component.html
+++ b/src/app/protected/cranix/devices/add-device/add-device.component.html
@@ -1,6 +1,6 @@
 <form #addDeviceForm="ngForm">
   <ion-header translucent>
-    <ion-toolbar>
+    <ion-toolbar color="primary">
       <ion-title >{{ 'Add device' | translate }}</ion-title>
       <ion-buttons slot="end">
         <ion-button (click)="onSubmit()" class="ion-no-margin"
