--- a/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
+++ b/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
@@ -1,4 +1,20 @@
 <cranix-toolbar></cranix-toolbar>
+@if(isRegisterEventOpen){
+<ion-toolbar class="page-toolbar">
+    <ion-title>{{'Event Registrations'|translate}} {{selectedPTM.start|date:'yyyy-MM-dd'}}
+        {{selectedPTM.start|date:'HH:mm'}} - {{selectedPTM.end|date:'HH:mm'}}</ion-title>
+    <ion-buttons slot="end">
+        <ion-button fill="clear" size="small" (click)="isRegisterEventOpen = false">
+            <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+</ion-toolbar>
+<ion-content>
+    <cranix-ptm-view [id]="selectedPTM.id"></cranix-ptm-view>
+</ion-content>
+}
+@else
+{
 <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="parents">
     <ion-segment-button value="parents">
         <ion-label>{{'Parents'|translate}}</ion-label>
@@ -11,20 +27,19 @@
     </ion-segment-button>
 </ion-segment>
 @if(segment == 'ptm'){
-
 <ion-content>
     <form #addEditPTMForm="ngForm">
-        <ion-toolbar>
+        <ion-toolbar class="page-toolbar">
             @if(selectedPTM.id > 0){
             <ion-title>{{'Edit parent teacher meeting'|translate}} </ion-title>
             }@else{
             <ion-title>{{'Create parent teacher meeting'|translate}} </ion-title>
             }
             <ion-buttons slot="end">
-                <ion-button (click)="showRegistrationOpen = true" [disabled]="selectedPTM.id == 0">
+                <ion-button (click)="isRegisterEventOpen = true" [disabled]="selectedPTM.id == 0">
                     <ion-icon slot="icon-only" color="success" name="people"></ion-icon>
                 </ion-button>
-                <ion-button (click)="isRegisterRoomOpen = true" [disabled]="selectedPTM.id == 0">
+                <ion-button (click)="registerRoom()" [disabled]="selectedPTM.id == 0">
                     <ion-icon slot="icon-only" color="success" name="room"></ion-icon>
                 </ion-button>
                 <ion-button (click)="addEditPTM()" [disabled]="!addEditPTMForm.valid">
@@ -47,11 +62,12 @@
             </ion-item>
             <ion-item>
                 <ion-label>{{'Duration of a session.'|translate}}*</ion-label>
-                <input [(ngModel)]="selectedPTM.duration" name="duration" type="number" required />{{'Minutes'|translate}}
+                <input [(ngModel)]="selectedPTM.duration" name="duration" type="number"
+                    required />{{'Minutes'|translate}}
             </ion-item>
             <ion-item>
                 <ion-label>{{'Start Parent Registration'|translate}}*</ion-label>
-                <input [(ngModel)]="selectedPTM.startRegsitration" name="startRegsitration" type="datetime-local"
+                <input [(ngModel)]="selectedPTM.startRegistration" name="startRegistration" type="datetime-local"
                     required />
             </ion-item>
             <ion-item>
@@ -77,22 +93,6 @@
             matTooltip="{{'Create a new parent' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
         </ion-button>
-        <ion-button size="small" fill="solid" (click)="addEditPtm(null)"
-            matTooltip="{{'Create a new PTM' | translate }}">
-            <ion-icon slot="icon-only" name="calendar-clear"></ion-icon>
-        </ion-button>
-        <ion-button size="small" fill="solid" (click)="addEditPtm(selectedPTM)"
-            matTooltip="{{'Edit actuall PTM' | translate }}">
-            <ion-icon slot="icon-only" name="calendar-clear"></ion-icon>
-        </ion-button>
-        <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-            matTooltip="{{'Apply actions on the selected objects' | translate }}">
-            <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-        </ion-button>
-        <ion-button size="small" fill="solid" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-        </ion-button>
     </ion-buttons>
 </ion-toolbar>
 <ion-content>
@@ -103,7 +103,7 @@
         id="agGridTable">
     </ag-grid-angular>
 </ion-content>
-
+}
 }
 <ion-modal [isOpen]="isRegisterRoomOpen">
     <ng-template>
@@ -111,7 +111,7 @@
             <ion-toolbar color="primary">
                 <ion-title>{{addEditEventTitle|translate}}</ion-title>
                 <ion-buttons slot="end">
-                    <ion-button class="ion-no-margin" (click)="registerRoom(addEditEventModal)">
+                    <ion-button class="ion-no-margin" (click)="doRegisterRoom()">
                         <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
                     </ion-button>
                     <ion-button fill="clear" size="small" (click)="isRegisterRoomOpen = false">
@@ -124,50 +124,57 @@
             <ion-item>
                 <ion-label>{{'Select room for the PTM' | translate}}</ion-label>
                 <ionic-selectable #ionicSelectRoom itemValueField="id" itemTextField="description" [isMultiple]="false"
-                    [(ngModel)]="myPTMTeacherInRoom.room" [ngModelOptions]="{standalone: true}" [items]="freeRooms"
+                    [(ngModel)]="ptmTeacherInRoom.room" [ngModelOptions]="{standalone: true}" [items]="freeRooms"
                     [canSearch]="true">
-                    <ng-template ionicSelectableHeaderTemplate>
-                        <ion-header color="primary">
-                            <ion-toolbar>
-                                <ion-title>
-                                    {{ "Select room for the PTM" | translate }}
-                                </ion-title>
-                                <ion-buttons slot="end">
-                                    <ion-button ion-button (click)="ionicSelectRoom.close()">
-                                        <ion-icon color="danger" name="close"></ion-icon>
-                                    </ion-button>
-                                </ion-buttons>
-                            </ion-toolbar>
-                        </ion-header>
-                    </ng-template>
                 </ionic-selectable>
             </ion-item>
             <ion-item>
-                <ion-label>{{'Select users for the PTM' | translate}}</ion-label>
+                <ion-label>{{'Select teacher for the PTM' | translate}}</ion-label>
                 <ionic-selectable #ionicSelectUsers itemValueField="id" itemTextField="fullName" [isMultiple]="false"
-                    [(ngModel)]="selectedPTM.user" [ngModelOptions]="{standalone: true}"
-                    [items]="objectService.allObjects['user']" [canSearch]="true">
-                    <ng-template ionicSelectableHeaderTemplate>
-                        <ion-header color="primary">
-                            <ion-toolbar>
-                                <ion-title>
-                                    {{ "Select users for the PTM" | translate }}
-                                </ion-title>
-                                <ion-buttons slot="end">
-                                    <ion-button ion-button (click)="ionicSelectUsers.close()">
-                                        <ion-icon color="danger" name="close"></ion-icon>
-                                    </ion-button>
-                                </ion-buttons>
-                            </ion-toolbar>
-                        </ion-header>
-                    </ng-template>
-                    <ng-template ionicSelectableValueTemplate let-ports="value">
-                        <div class="ionic-selectable-value-item">
-                            {{ports.length}} {{'users are seleceted'|translate}}
-                        </div>
-                    </ng-template>
+                    [(ngModel)]="ptmTeacherInRoom.teacher" [ngModelOptions]="{standalone: true}" [items]="freeTeachers"
+                    [canSearch]="true">
                 </ionic-selectable>
             </ion-item>
+        </ion-content>
+    </ng-template>
+</ion-modal>
+<ion-modal [isOpen]="isAddEditParentOpen">
+    <ng-template>
+        <ion-header>
+            <ion-toolbar color="primary">
+                <ion-title></ion-title>
+                <ion-buttons slot="end">
+                    <ion-button class="ion-no-margin" (click)="addEditParent()">
+                        <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
+                    </ion-button>
+                    <ion-button fill="clear" size="small" (click)="isAddEditParentOpen = false">
+                        <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
+                    </ion-button>
+                </ion-buttons>
+            </ion-toolbar>
+        </ion-header>
+        <ion-content>
+            <ion-list>
+                <ion-item>
+                    <ion-input label="{{'surName'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.surName" name="surName"></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-input label="{{'givenName'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.givenName" name="givenName"></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-input label="{{'emailAddress'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.emailAddress" name="emailAddress"></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-input label="{{'telefonNumber'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.telefonNumber" name="telefonNumber"></ion-input>
+                </ion-item>
+                <ion-item>
+                    <ion-label>{{'Select children for the parent' | translate}}</ion-label>
+                    <ionic-selectable #ionicSelectChildren itemValueField="id" itemTextField="fullName" [isMultiple]="false"
+                        [(ngModel)]="selectedChildren" [ngModelOptions]="{standalone: true}" [items]="children"
+                        [canSearch]="true">
+                    </ionic-selectable>
+                </ion-item>
+            </ion-list>
         </ion-content>
     </ng-template>
 </ion-modal>
