One more step to show registrations

--- a/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
+++ b/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
@@ -61,7 +61,7 @@
                 <input [(ngModel)]="selectedPTM.end" name="endTime" type="datetime-local" required />
             </ion-item>
             <ion-item>
-                <ion-label>{{'Duration of a session.'|translate}}*</ion-label>
+                <ion-label>{{'Duration of a Session.'|translate}}*</ion-label>
                 <input [(ngModel)]="selectedPTM.duration" name="duration" type="number"
                     required />{{'Minutes'|translate}}
             </ion-item>
