--- a/src/app/protected/edu/lessons/ptms/ptms.component.html
+++ b/src/app/protected/edu/lessons/ptms/ptms.component.html
@@ -1,77 +1,41 @@
 <cranix-toolbar></cranix-toolbar>
 @if(selectedPTM == null){
-<h1>{{'There is no PTM' | translate}} </h1>
+<ion-content>
+    <h1>{{'There is no PTM' | translate}} </h1>
+</ion-content>
 }@else{
-<ion-list>
-    <ion-list-header lines="full">
-        {{selectedPTM.title}}
-    </ion-list-header>
-    <ion-item>
-        <ion-label>{{'From'|translate}}*</ion-label>
-        <input [(ngModel)]="selectedPTM.start" name="startTime" type="datetime-local" readonly />
-    </ion-item>
-    <ion-item>
-        <ion-label>{{'Until'|translate}}*</ion-label>
-        <input [(ngModel)]="selectedPTM.end" name="endTime" type="datetime-local" readonly />
-    </ion-item>
-    <ion-item>
-        <ion-input [(ngModel)]="selectedPTM.duration" label="{{'duration'|translate}}" labelPlacement="fixed"
-            type="number" readonly></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label>{{'Start Parent Registration'|translate}}*</ion-label>
-        <input [(ngModel)]="selectedPTM.startRegsitration" name="startTime" type="datetime-local" readonly />
-    </ion-item>
-    <ion-item>
-        <ion-label>{{'End Parent Registration'|translate}}*</ion-label>
-        <input [(ngModel)]="selectedPTM.endRegistration" name="endTime" type="datetime-local" readonly />
-    </ion-item>
-    <ion-item>
-        @if(myPTMTeacherInRoom.id > 0 && selectedPTM.startRegsitration.befor(now)){
-        <ion-label>{{'Your Room'|translate}}</ion-label>
-        <ion-label>{{myPTMTeacherInRoom.room.name}}: {{myPTMTeacherInRoom.room.description}} </ion-label>
-        }@else{
-        <ion-label>{{'Register a room'|translate}}</ion-label>
-        <ionic-selectable #ionicSelectRoom itemValueField="id" itemTextField="description" [isMultiple]="false"
-            [(ngModel)]="myPTMTeacherInRoom.room" [ngModelOptions]="{standalone: true}" [items]="freeRooms"
-            [canSearch]="true" (onChange)="selectRoom()">
-            <ng-template ionicSelectableHeaderTemplate>
-                <ion-header color="primary">
-                    <ion-toolbar>
-                        <ion-title>
-                            {{ "Select room for the PTM" | translate }}
-                        </ion-title>
-                        <ion-buttons slot="end">
-                            <ion-button ion-button (click)="ionicSelectRoom.close()">
-                                <ion-icon color="danger" name="close"></ion-icon>
-                            </ion-button>
-                        </ion-buttons>
-                    </ion-toolbar>
-                </ion-header>
-            </ng-template>
-        </ionic-selectable>
-        }
-    </ion-item>
-</ion-list>
-@if(myPTMTeacherInRoom.id > 0 && selectedPTM.startRegsitration.befor(now)){
-<ion-list>
-    <ion-list-header lines="full">
-        {{'Registrations'|translate}}
-    </ion-list-header>
-    @for(item of myPTMTeacherInRoom.events) {
-    <ion-item>
-        <ion-label>{{item.start|date "HH:mm"}}</ion-label>
-        @if(event.parent){
-        @if(event.student){
-        <ion-label>{{event.parent.fullName}} {{event.student.fullName}} </ion-label>
-        }@else{
-        <ion-label>{{event.parent.fullName}} {{event.parente.children[0].fullName}} </ion-label>
-        }
-        }@else{
-        <ion-label color="success">{{'free'|translate}} </ion-label>
-        }
-    </ion-item>
-    }
-</ion-list>
-}
+<ion-content>
+    <ion-list>
+        <ion-list-header lines="full">
+            {{selectedPTM.title}}
+        </ion-list-header>
+        <ion-item>
+            <ion-label>{{'From'|translate}}</ion-label>
+            <input [(ngModel)]="selectedPTM.start" name="startTime" type="datetime-local" readonly />
+        </ion-item>
+        <ion-item>
+            <ion-label>{{'Until'|translate}}</ion-label>
+            <input [(ngModel)]="selectedPTM.end" name="endTime" type="datetime-local" readonly />
+        </ion-item>
+        <ion-item>
+            <ion-label>{{'Duration of a Session'|translate}}</ion-label>
+            <input [(ngModel)]="selectedPTM.duration" type="number" readonly />
+        </ion-item>
+        <ion-item>
+            <ion-label>{{'Start Parent Registration'|translate}}</ion-label>
+            <input [(ngModel)]="selectedPTM.startRegistration" name="startTime" type="datetime-local" readonly />
+        </ion-item>
+        <ion-item>
+            <ion-label>{{'End Parent Registration'|translate}}</ion-label>
+            <input [(ngModel)]="selectedPTM.endRegistration" name="endTime" type="datetime-local" readonly />
+        </ion-item>
+        <ion-item>
+            <ion-label>{{'Register a room'|translate}}</ion-label>
+            <ionic-selectable #ionicSelectRoom itemValueField="id" itemTextField="description" [isMultiple]="false"
+                [(ngModel)]="myPTMTeacherInRoom.room" [ngModelOptions]="{standalone: true}" [items]="freeRooms"
+                [canSearch]="true" (onChange)="selectRoom()">
+            </ionic-selectable>
+        </ion-item>
+    </ion-list>
+</ion-content>
 }
