--- a/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
+++ b/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
@@ -36,14 +36,20 @@
             <ion-title>{{'Create parent teacher meeting'|translate}} </ion-title>
             }
             <ion-buttons slot="end">
-                <ion-button (click)="isRegisterEventOpen = true" [disabled]="selectedPTM.id == 0">
-                    <ion-icon slot="icon-only" color="success" name="people"></ion-icon>
+                <ion-button (click)="addEditPTM()" [disabled]="!addEditPTMForm.valid">
+                    <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
+                </ion-button>
+                <ion-button (click)="sendMails()" [disabled]="!isNewPtm">
+                    <ion-icon slot="icon-only" color="success" name="mail-outline"></ion-icon>
                 </ion-button>
                 <ion-button (click)="registerRoom()" [disabled]="selectedPTM.id == 0">
                     <ion-icon slot="icon-only" color="success" name="room"></ion-icon>
                 </ion-button>
-                <ion-button (click)="addEditPTM()" [disabled]="!addEditPTMForm.valid">
-                    <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
+                <ion-button (click)="isRegisterEventOpen = true" [disabled]="selectedPTM.id == 0">
+                    <ion-icon slot="icon-only" color="success" name="people"></ion-icon>
+                </ion-button>
+                <ion-button (click)="isDeletePtmOpen" [disabled]="selectedPTM.id == 0">
+                    <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
                 </ion-button>
             </ion-buttons>
         </ion-toolbar>
@@ -51,6 +57,7 @@
             <ion-item>
                 <ion-input [(ngModel)]="selectedPTM.title" name="title" label="{{'Title'|translate}}"
                     labelPlacement="fixed" required></ion-input>
+                <ion-button (click)="isSelectPtmOpen = true">{{'Select'|translate}}</ion-button>
             </ion-item>
             <ion-item>
                 <ion-label>{{'From'|translate}}*</ion-label>
@@ -73,8 +80,24 @@
             <ion-item>
                 <ion-label>{{'End Parent Registration'|translate}}*</ion-label>
                 <input [(ngModel)]="selectedPTM.endRegistration" name="endRegistration" type="datetime-local"
-                    required />
+                    required/>
             </ion-item>
+            @if(isNewPtm || selectedPTM.id == 0){
+                <ion-item>
+                    <ion-label>{{'Select classes for the PTM' | translate}}</ion-label>
+                    <ionic-selectable #ionicSelectUser itemValueField="id" itemTextField="name" [isMultiple]="true"
+                        [(ngModel)]="selectedPTM.classes" [ngModelOptions]="{standalone: true}" [items]="classes"
+                        [canSearch]="true">
+                    </ionic-selectable>
+                </ion-item>
+            }
+            @if(selectedPTM.id == 0 && formerPtms.length > 0) {
+                <ion-item>
+                    <ion-select label="{{'Select template for room reservation.'}}" [(ngModel)]="selectedPTM.templateId" name="templateId">
+                        <ion-select-option *ngFor="let ptm of formerPtms" [value]="ptm.id">{{ptm.title}}</ion-select-option>
+                    </ion-select>
+                </ion-item>
+            }
         </ion-list>
     </form>
 </ion-content>
@@ -156,25 +179,66 @@
         <ion-content>
             <ion-list>
                 <ion-item>
-                    <ion-input label="{{'surName'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.surName" name="surName"></ion-input>
+                    <ion-input label="{{'surName'|translate}}" labelPlacement="fixed"
+                        [(ngModel)]="selectedParent.surName" name="surName"></ion-input>
                 </ion-item>
                 <ion-item>
-                    <ion-input label="{{'givenName'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.givenName" name="givenName"></ion-input>
+                    <ion-input label="{{'givenName'|translate}}" labelPlacement="fixed"
+                        [(ngModel)]="selectedParent.givenName" name="givenName"></ion-input>
                 </ion-item>
                 <ion-item>
-                    <ion-input label="{{'emailAddress'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.emailAddress" name="emailAddress"></ion-input>
+                    <ion-input label="{{'emailAddress'|translate}}" labelPlacement="fixed"
+                        [(ngModel)]="selectedParent.emailAddress" name="emailAddress"></ion-input>
                 </ion-item>
                 <ion-item>
-                    <ion-input label="{{'telefonNumber'|translate}}" labelPlacement="fixed" [(ngModel)]="selectedParent.telefonNumber" name="telefonNumber"></ion-input>
+                    <ion-input label="{{'telefonNumber'|translate}}" labelPlacement="fixed"
+                        [(ngModel)]="selectedParent.telefonNumber" name="telefonNumber"></ion-input>
                 </ion-item>
                 <ion-item>
                     <ion-label>{{'Select children for the parent' | translate}}</ion-label>
-                    <ionic-selectable #ionicSelectChildren itemValueField="id" itemTextField="fullName" [isMultiple]="false"
-                        [(ngModel)]="selectedChildren" [ngModelOptions]="{standalone: true}" [items]="children"
-                        [canSearch]="true">
+                    <ionic-selectable #ionicSelectChildren itemValueField="id" itemTextField="fullName"
+                        [isMultiple]="false" [(ngModel)]="selectedChildren" [ngModelOptions]="{standalone: true}"
+                        [items]="children" [canSearch]="true">
                     </ionic-selectable>
                 </ion-item>
             </ion-list>
+        </ion-content>
+    </ng-template>
+</ion-modal>
+<ion-modal [isOpen]="isSelectPtmOpen">
+    <ng-template>
+        <ion-header>
+            <ion-toolbar>
+                <ion-title>{{'Select PTM'|translate}}</ion-title>
+                <ion-buttons slot="end">
+                    <ion-button fill="clear" size="small" (click)="isSelectPtmOpen = false">
+                        <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
+                    </ion-button>
+                </ion-buttons>
+            </ion-toolbar>
+        </ion-header>
+        <ion-content>
+            <ion-list>
+                <ion-item *ngFor="let ptm of nextPtms">
+                    <ion-button fill="clear" expand="full" (click)="selectPtm(ptm)">{{ptm.title}}</ion-button>
+                </ion-item>
+                @if(formerPtms.length > 0) {
+                    <ion-item>{{'Former PTMS:'|translate}}</ion-item>
+                    <ion-item *ngFor="let ptm of formerPtms">
+                        <ion-button fill="clear" expand="full" (click)="selectPtm(ptm)">{{ptm.title}}</ion-button>
+                    </ion-item>
+                }
+            </ion-list>
+        </ion-content>
+    </ng-template>
+</ion-modal>
+<ion-modal [isOpen]="isDeletePtmOpen">
+    <ng-template>
+        <ion-content>
+            {{'Do you realy want to delete?'|translate}}
+            <ion-item>
+                <ion-button ></ion-button>
+            </ion-item>
         </ion-content>
     </ng-template>
 </ion-modal>
