Implementing selecting and blocking events. Implementing event list for teachers.

--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -16,7 +16,7 @@
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{ 'Security' | translate }}</ion-label>
     </ion-tab-button>
-    <ion-tab-button *ngIf="authS.isOneOfAllowed(['ptm.manage','ptm.use'])" tab="ptms">
+    <ion-tab-button *ngIf="authS.isOneOfAllowed(['ptm.manage','ptm.registerRoom'])" tab="ptms">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{ 'PTM' | translate }}</ion-label>
     </ion-tab-button>
